# claude-obsidian-second-brain

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
agents/: 01_parser.py  02_cleaner.py  03_tagger.py  04_extractor.py  05_graph_builder.py  06_linker.py  07_moc_generator.py  08_formatter.py  09_indexer.py  10_orchestrator.py  __init__.py  models.py  orchestrator.py
config/: settings.yaml  tags_taxonomy.yaml
scripts/: run.sh  setup.sh
vault-template/.obsidian/: app.json  appearance.json
vault-template/000 Index/: README.md  Timeline.md  Topics MOC.md
